--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,10 @@ ehthumbs_vista.db
 # Recycle Bin used on file shares
 $RECYCLE.BIN/
 
+# Node modules
+node_modules/
+package-lock.json
+
 # Windows Installer files
 *.cab
 *.msi
